[package]
name = "cni-ipam-consul"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consul = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.62"
argh = "0.1.4"
thiserror = "1.0.23"
