[package]
name = "cni-advertise"
version = "0.1.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "CNI post-processing plugin to advertise IPs with ARP/NDP"
keywords = ["cni", "cni-plugin", "ndp-advertisement", "gratuitous-arp", "arp", "ndp"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/advertise"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[[bin]]
name = "advertise"
path = "src/main.rs"

[dependencies]
cni-plugin = { path = "../plugin", features = ["with-smol"] }
async-std = "1.9.0"
ipnetwork = "0.17.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = "2.2.0"
base64 = "0.13.0"
thiserror = "1.0.24"
semver = "0.11.0"
log = "0.4.14"

[features]
release-logs = ["cni-plugin/release-logs"]
