[package]
name = "cni-advertise"
version = "0.1.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "CNI post-processing plugin to advertise IPs with ARP/NDP"
keywords = ["cni", "cni-plugin", "ndp-advertisement", "gratuitous-arp", "arp", "ndp"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/advertise"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[[bin]]
name = "advertise"
path = "src/main.rs"

[dependencies]
async-std = "1.9.0"
cni-plugin = { path = "../plugin" }
ipnetwork = "0.17.0"
log = "0.4.14"

[features]
release-logs = ["cni-plugin/release-logs"]
