[package]
name = "cni-ipam-consul"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

[[bin]]
name = "ipam-da-consul"
path = "src/main.rs"

[dependencies]
cni-plugin = { path = "../plugin" }
async-std = "1.9.0"
ipnetwork = "0.17.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = "2.2.0"
base64 = "0.13.0"
thiserror = "1.0.24"
semver = "0.11.0"
