[package]
name = "cni-ipam-da-consul"
version = "0.1.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "CNI IPAM delegated plugin to allocate IPs in pools stored in Consul KV"
keywords = ["cni", "cni-plugin", "consul", "ipam"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/ipam-da-consul"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[[bin]]
name = "ipam-da-consul"
path = "src/main.rs"

[dependencies]
cni-plugin = { path = "../plugin" }
async-std = "1.9.0"
ipnetwork = "0.17.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = "2.2.0"
base64 = "0.13.0"
thiserror = "1.0.24"
semver = "0.11.0"
log = "0.4.14"
url = "2.2.1"

[features]
release-logs = ["cni-plugin/release-logs"]
