[package]
name = "ipam-da-consul"
version = "0.3.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "CNI IPAM delegated plugin to allocate IPs in pools stored in Consul KV"
keywords = ["cni", "cni-plugin", "consul", "ipam"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/ipam-da-consul"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[dependencies]
async-std = "1.9.0"
base64 = "0.13.0"
cni-plugin = { path = "../plugin" }
ipnetwork = "0.17.0"
log = { version = "0.4.14", features = ["release_max_level_debug"] }
semver = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = { version = "2.2.0", default-features = false, features = ["curl-client", "middleware-logger"] }
thiserror = "1.0.24"
url = "2.2.1"

[features]
release-logs = ["cni-plugin/release-logs"]
