[package]
name = "cni-ipam-delegated"
version = "0.0.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "CNI IPAM plugin to delegate work to a stack of IPAM plugins"
keywords = ["cni", "cni-plugin", "ipam"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/ipam-delegated"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[[bin]]
name = "ipam-delegated"
path = "src/main.rs"

[dependencies]
async-std = "1.9.0"
base64 = "0.13.0"
cni-plugin = { path = "../plugin", features = ["with-smol"] }
ipnetwork = "0.17.0"
log = "0.4.14"
semver = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = "2.2.0"
thiserror = "1.0.24"

[features]
release-logs = ["cni-plugin/release-logs"]
