[package]
name = "cni-ipam-ds-nomad"
version = "0.0.0"
publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "CNI IPAM delegated plugin to gather pool configuration from a Nomad job"
keywords = ["cni", "cni-plugin", "nomad", "ipam"]

documentation = "https://github.com/passcod/cni-plugins/tree/main/ipam-ds-nomad"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[[bin]]
name = "ipam-ds-nomad"
path = "src/main.rs"

[dependencies]
async-std = "1.9.0"
base64 = "0.13.0"
cni-plugin = { path = "../plugin" }
ipnetwork = "0.17.0"
log = "0.4.14"
semver = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
surf = { version = "2.2.0", default-features = false, features = ["curl-client", "middleware-logger"] }
thiserror = "1.0.24"
url = "2.2.1"

[features]
release-logs = ["cni-plugin/release-logs"]
