[package]
name = "cni-plugin"
version = "0.2.1"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Framework to implement CNI (container networking) plugins in Rust"
keywords = ["cni", "cni-plugin", "container-networking", "networking", "container"]

documentation = "https://docs.rs/cni-plugin"
homepage = "https://github.com/passcod/cni-plugins"
repository = "https://github.com/passcod/cni-plugins"

edition = "2018"

[dependencies]
async-process = { version = "1.0.2", optional = true }
futures = { version = "0.3.13", optional = true }
ipnetwork = "0.17.0"
log = "0.4.14"
macaddr = "1.0.1"
regex = "1.4.5"
semver = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
simplelog = "0.10.0"
thiserror = "1.0.23"
tokio = { version = "1.4.0", optional = true }
which = "4.1.0"

[features]
release-logs = []
with-smol = ["async-process", "futures"]
with-tokio = ["tokio/io-util", "tokio/process"]

[package.metadata.docs.rs]
features = ["with-smol"]
